--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,9 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body> 
-      <p>Yay! it works!</p>
-      <img class="logo" src="images/nodejs-logo.png" />
+    	<article>
+	      <h1>This is example # 2</h1>
+	      <img class="logo" src="images/nodejs-logo.png" />
+    	</article>
     </body> 
 </html>
