--- a/www/index.html
+++ b/www/index.html
@@ -2,13 +2,17 @@
 <html>
     <head> 
         <meta charset="utf-8"> 
-        <title>Example Web Page</title>
+        <title>Express.js example | Home</title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body> 
-    	<article>
-	      <h1>This is example # 2</h1>
-	      <img class="logo" src="images/nodejs-logo.png" />
-    	</article>
+        <article>
+            <nav>
+                <a href="/">Home</a>
+                <a href="/about">About</a>
+            </nav>
+            <h1>This is www/index.html</h1>
+            <img class="logo" src="images/nodejs-logo.png" />
+        </article>
     </body> 
 </html>
